# VulkanSDL_particles

./: CMakeLists.txt  main.cpp
shaders/compute/: ConstraintsClear.comp  ConstraintsClear.comp.spv  ConstraintsUpdate.comp  ConstraintsUpdate.comp.spv  MapClear.comp  MapClear.comp.spv  MapUpdate.comp  MapUpdate.comp.spv  NeightSort.comp  NeightSort.comp.spv  NeightUpdate.comp  NeightUpdate.comp.spv  clearImage.comp  clearImage.comp.spv  common.comp.spv  common.glsl  compile.sh  particle.comp  particle.comp.spv  particleImage.comp  particleImage.comp.spv
shaders/compute/noise/: multiHash.glsl  perlinNoise.glsl
shaders/render/: compile.sh  fs_boxes.frag  fs_boxes.frag.spv  instancing.frag  instancing.frag.spv  instancing.vert  instancing.vert.spv  instancing_c.frag  instancing_c.frag.spv  instancing_c.vert  instancing_c.vert.spv  instancing_s.frag  instancing_s.frag.spv  instancing_s.vert  instancing_s.vert.spv  render_constraints.frag  render_constraints.vert  render_constraints.vert.spv  render_triangles.frag  render_triangles.vert  render_triangles.vert.spv  vs_boxes.vert  vs_boxes.vert.spv
source/: Constants.hpp  graphmodule.cpp  graphmodule.hpp  graphmodule_computepart.cpp  graphmodule_renderpart.cpp  graphmodule_supportpart.cpp  mainloop.cpp  mainloop.hpp  ndearimgui.cpp  ndearimgui.hpp  nvulkanbase.cpp  nvulkanbase.hpp  platformsdl.cpp  platformsdl.hpp  solver.cpp  solver.hpp  supportStructs.hpp
src/Settings/: AppConstants.h  AppSettings.cpp  AppSettings.h  PlatformSpecifics.h  json.hpp  jsonConvert_c.h
src/VulkanModule/AddOns/: TextureImage.h
src/VulkanModule/AddOns/3DObjects/: Quad2DTextured.cpp
src/VulkanModule/AddOns/Renderables/: AddOns.h  DynamicRenderable.h  FixedRenderable.h  iRenderable.h
src/VulkanModule/AddOns/VertexTypes/: VertexType.h
src/VulkanModule/Assist/: DeviceAssessment.cpp  DeviceProfile.h  DeviceRanking.cpp  vkEnumStrings.cpp
src/VulkanModule/Objects/: CommandObjects.cpp  Framebuffers.cpp  Framebuffers.h  GraphicsDevice.cpp  GraphicsPipeline.cpp  Swapchain.cpp  Swapchain.h
src/VulkanModule/Platform/: PlatformExtension.h
src/VulkanModule/Platform/FileSystem/: FileSystem.cpp  FileSystem.h
src/VulkanModule/Platform/GUISystem/: DearImGui.cpp  DearImGui.h
src/VulkanModule/Platform/ImageHandling/: ImageSDL.h  ImageSTB.h  sdlEquivalents.h
src/VulkanModule/Platform/OSAbstraction/: PlatformSDL.cpp  PlatformSDL.h
src/VulkanModule/Setup/: VulkanConfigure.h  VulkanSetup.cpp
src/VulkanModule/nObjects/: basevulkan.cpp  basevulkan.hpp  nrenderable.cpp  nrenderable.hpp
src/base/: CMakeLists.txt  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  camera.hpp  vulkanexamplebase.cpp
